# kendo

./: .gitmodules  CMakeLists.txt  README.md  build.sh
core/: CMakeLists.txt  Entity.cpp  IndexBuffer.cpp  Mesh.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  Program.cpp  Renderer.cpp  Renderer.h  Shader.cpp  ShaderLoader.cpp  Texture.cpp  TextureData.cpp  TextureLoader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
core/include/: Entity.h  GlExtensions.h  IndexBuffer.h  Mesh.h  Program.h  Renderer.h  Shader.h  ShaderLoader.h  Texture.h  TextureLoader.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
core/include/camera/: OrthographicCamera.h  PerspectiveCamera.h
core/include/data/: TextureData.h  Vertex.h  VertexData.h
core/include/loading/: TextureLoader.h
desktop/: CMakeLists.txt  ShaderLoader.cpp  ShaderLoader.h  WindowHandler.cpp  main.cpp  main.cpp.autosave
desktop/include/: WindowHandler.h
desktop/install/: base.frag  base.vert
libs/: CMakeLists.txt
libs/stb/: CMakeLists.txt
